[package]
name = "mambo_map"
version = "0.0.1"
edition = "2021"
description = "??"
license = "MIT"
#homepage = ""
repository = "https://github.com/weneed1t/mambo_map"
#documentation = ""
readme = "README.md"
#categories = [""]
#keywords = [""]


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }

[dependencies]

[profile.release]

strip = "symbols"       # Удаляет символы и отладочную информацию :cite[3]:cite[6]
#overflow-checks = false # Отключает проверки переполнения :cite[3]
codegen-units = 1  # Снижает параллелизацию для лучшей оптимизации :cite[2]:cite[6]
lto = "fat"  # Включает полную LTO-оптимизацию :cite[2]:cite[6]
opt-level = 3  # Максимальная оптимизация скорости выполнения :cite[2]:cite[3]
