[package]
name = "mambo_map"
version = "0.0.8"
edition = "2021"
description = "lightweight, simple, minimally blocking multithreaded hashtable"
license = "MIT"
#homepage = ""
repository = "https://github.com/weneed1t/mambo_map"
#documentation = ""
readme = "README.md"
#categories = ["category:data-structures"]
keywords = ["multithreaded", "hashmap", "hashtable", "simple", "lightweight"]


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }

[dependencies]

[profile.release]

strip = "symbols"

codegen-units = 1
lto = "fat"       #
opt-level = 3
