#:schema https://json.schemastore.org/cargo.json

[package]
name = "mambo_map"
version = "0.1.31"
edition = "2024"
description = "lightweight, simple, minimally blocking multithreaded hashtable"
license = "MIT"
#homepage = ""
repository = "https://github.com/weneed1t/mambo_map"
#documentation = ""
readme = "README.md"
#categories = ["category:data-structures"]
keywords = ["multithreaded", "hashmap", "hashtable", "simple", "lightweight"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(test)"] }

# ========== CLIPPY CONFIGURATION ==========
[lints.clippy]
# Base lint groups
all = { level = "warn", priority = -1 }
#pedantic = { level = "warn", priority = -1 }
#nursery = { level = "warn", priority = -1 }

# Safety in multithreaded code
unwrap_used = "deny" # Forbid unwrap() — avoid panics
#expect_used = "warn" # Recommend expect() with a message
##panic = "deny" # Forbid explicit panic!() calls
todo = "deny"      # No unfinished code allowed
dbg_macro = "deny" # Forbid debug macro dbg!()

# Performance and correctness for hash table
significant_drop_in_scrutinee = "warn"
await_holding_lock = "warn"            # Useful if you add async later
mutex_atomic = "warn"

[dependencies]

[profile.release]
strip = "symbols"
codegen-units = 1
lto = "fat"
opt-level = 3
